--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+html,
+body {
+  height: 100%; /* Ensure html and body take the full height */
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  background-color: black; /* Set the background color to black */
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
