--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html,
 body {
-  height: 100%; /* Ensure html and body take the full height */
-  background-color: black; /* Set the background color to black */
+  height: 100%;
+  background-color: black;
 }
 
 #root {
